tests/fixtures/invalid/int_attribute.py
# Test attribute access on int (unsupported)
x: int = 42
print(x.something)
